
- Sept 30, 2012 (v 0.1)
------------------------
1. Fully functional for double opt-in (needs docs)

- Sept 17, 2012 (v 0.1)
------------------------
1. Initial Version (incomplete)