@@ -1,5 +1,10 @@
 
-- Sept 30, 2012 (v 0.1)
+- Oct 3, 2012 (v 0.3)
+------------------------
+1. On confirmation failure just log it and return to login page
+ - This is to allow exporting existing emails into Aweber list without seeing a 404
+
+- Sept 30, 2012 (v 0.2)
 ------------------------
 1. Fully functional for double opt-in (needs docs)
 
